--- a/AzureTechKnightWebApp/Pages/Index.cshtml
+++ b/AzureTechKnightWebApp/Pages/Index.cshtml
@@ -17,4 +17,6 @@
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </p>
+    <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="Popover title" data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+
 </div>
