Added a image banner

--- a/AzureTechKnightWebApp/Pages/Index.cshtml
+++ b/AzureTechKnightWebApp/Pages/Index.cshtml
@@ -10,6 +10,10 @@
 </div>
 
 <div class="jumbotron">
+    <div class="row" style="background-color:black">
+        <img src="https://clicklive.rhipe.com/rs/325-ALW-394/images/RHIPE-techKnights_HERO-Overlay-2.png" />
+    </div>
+
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
     <hr class="my-4">
